WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181984
WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/merge.py::test_merge_platformName fails
https://bugs.webkit.org/show_bug.cgi?id=181984
Summary
WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/merge.py::t...
Carlos Garcia Campos
Reported
2018-01-23 06:44:31 PST
Seems to be a matter of doing case insensitive cmp. __________________________________________________________________________________ test_merge_platformName ___________________________________________________________________________________ new_session = <function create_session at 0x7fa92c0b2b18>, add_browser_capabilites = <function update_capabilities at 0x7fa92c0b2b90>, platform_name = 'linux' @pytest.mark.skipif(platform_name() is None, reason="Unsupported platform") def test_merge_platformName(new_session, add_browser_capabilites, platform_name): resp, _ = new_session({"capabilities": {"alwaysMatch": add_browser_capabilites({"timeouts": {"script": 10}}), "firstMatch": [ { "platformName": platform_name.upper(), "pageLoadStrategy": "none" }, { "platformName": platform_name, "pageLoadStrategy": "eager" } ]}})
> assert resp["capabilities"]["platformName"] == platform_name
E AssertionError: assert 'LINUX' == 'linux' E - LINUX E + linux _ = <webdriver.client.Session object at 0x7fa92c0753d0> add_browser_capabilites = <function update_capabilities at 0x7fa92c0b2b90> new_session = <function create_session at 0x7fa92c0b2b18> platform_name = 'linux' resp = {'capabilities': {'acceptInsecureCerts': False, 'browserName': 'MiniBrowser', 'browserVersion': '2.19.6', 'pageLoadStrategy': 'none', ...}, 'sessionId': 'b0973e15-e57f-472e-9251-5cf5101bb437'} WebDriverTests/imported/w3c/webdriver/tests/sessions/new_session/merge.py:54: AssertionError
Attachments
Patch
(3.20 KB, patch)
2018-01-24 05:23 PST
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.21 MB, application/zip)
2018-01-24 06:52 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2018-01-24 05:23:09 PST
Created
attachment 332148
[details]
Patch
EWS Watchlist
Comment 2
2018-01-24 06:52:25 PST
Comment on
attachment 332148
[details]
Patch
Attachment 332148
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/6194686
New failing tests: fast/text/combining-character-sequence-fallback-crash.html
EWS Watchlist
Comment 3
2018-01-24 06:52:26 PST
Created
attachment 332153
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Carlos Garcia Campos
Comment 4
2018-01-25 05:51:20 PST
Committed
r227602
: <
https://trac.webkit.org/changeset/227602
>
Radar WebKit Bug Importer
Comment 5
2018-01-25 05:52:21 PST
<
rdar://problem/36865230
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug