WebDriver: test imported/w3c/webdriver/tests/sessions/new_session/merge.py::test_merge_platformName fails https://bugs.webkit.org/show_bug.cgi?id=181984

Reviewed by Carlos Alberto Lopez Perez.

Source/WebDriver:

Platform name is expected to be lower case, so do not compre ignoring case.

Fixes: imported/w3c/webdriver/tests/sessions/new_session/merge.py::test_merge_platformName

* WebDriverService.cpp:
(WebDriver::WebDriverService::matchCapabilities const):

WebDriverTests:

Remove expectations for imported/w3c/webdriver/tests/sessions/new_session/merge.py::test_merge_platformName.

* TestExpectations.json:

Canonical link: https://commits.webkit.org/197937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227602 268f45cc-cd09-0410-ab3c-d52691b4dbfc